5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1717_2520.log
== TEST (2019-05-15 17:41:56) 
-- CODE:
n = int(input("digite um numero inteiro positivo: "))
i = 0
 
while(i < n):
	x = 1/(i + 1)**2
	pi = (6*x)**0.5
	i = i + 1
print(pi)	
	
-- OUTPUT:
0.004898979485566357
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:42:35) 
-- CODE:
n = int(input("digite um numero inteiro positivo: "))
i = 0
 
while(i < n):
	x = 1/(i + 1)**2
	pi = (6*x)**0.5
	i = i + 1
print(round(pi, 6))	
	
-- OUTPUT:
0.004899
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:42:49) 
-- CODE:
n = int(input("digite um numero inteiro positivo: "))
i = 0
 
while(i < n):
	x = 1/(i + 1)**2
	pi = (6*x)**0.5
	i = i + 1
print(round(pi, 6))	
	
-- OUTPUT:
0.004899
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:44:30) 
-- CODE:
n = int(input("digite um numero inteiro positivo: "))
i = 0
soma = 0 
while(i < n):
	x = 1/(i + 1)**2
	pi = (6*x)**0.5
	soma = soma + pi
	i = i + 1
print(round(pi, 6))	
	
-- OUTPUT:
0.004899
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:44:37) 
-- CODE:
n = int(input("digite um numero inteiro positivo: "))
i = 0
soma = 0 
while(i < n):
	x = 1/(i + 1)**2
	pi = (6*x)**0.5
	soma = soma + pi
	i = i + 1
print(round(pi, 6))	
	
-- OUTPUT:
0.004899
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:44:52) 
-- CODE:
n = int(input("digite um numero inteiro positivo: "))
i = 0
soma = 0 
while(i < n):
	x = 1/(i + 1)**2
	pi = (6*x)**0.5
	soma = soma + pi
	i = i + 1
print(round(soma, 6))	
	
-- OUTPUT:
16.638951
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:45:00) 
-- CODE:
n = int(input("digite um numero inteiro positivo: "))
i = 0
soma = 0 
while(i < n):
	x = 1/(i + 1)**2
	pi = (6*x)**0.5
	soma = soma + pi
	i = i + 1
print(round(soma, 6))	
	
-- OUTPUT:
16.638951
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:49:30) 
-- CODE:
n = int(input("digite um numero inteiro positivo: "))
i = 0
soma = 0 
while(i < n):
	x = 1/(i + 1)**2
	pi = (6*x)**0.5
	soma = soma + pi
	i = i + 1
	print(x)
	print(pi)
	print(soma)
	print(i)
print(round(soma, 6))	
	
-- OUTPUT:
1.0
2.449489742783178
2.449489742783178
1
0.25
1.224744871391589
3.674234614174767
2
0.1111111111111111
0.816496580927726
4.490731195102493
3
0.0625
0.6123724356957945
5.103103630798287
4
0.04
0.4898979485566356
5.593001579354923
5
0.027777777777777776
0.408248290463863
6.001249869818786
6
0.02040816326530612
0.3499271061118826
6.351176975930669
7
0.015625
0.30618621784789724
6.657363193778567
8
0.012345679012345678
0.2721655269759087
6.929528720754475
9
0.01
0.2449489742783178
7.174477695032793
10
0.008264462809917356
0.22268088570756164
7.397158580740355
11
0.006944444444444444
0.2041241452319315
7.601282725972286
12
0.005917159763313609
0.1884222879063983
7.7897050138786845
13
0.00510204081632653
0.1749635530559413
7.964668566934626
14
0.0044444444444444444
0.1632993161855452
8.12796788312017
15
0.00390625
0.15309310892394862
8.28106099204412
16
0.0034602076124567475
0.14408763192842225
8.425148623972541
17
0.0030864197530864196
0.13608276348795434
8.561231387460495
18
0.00277008310
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:50:21) 
-- CODE:
n = int(input("digite um numero inteiro positivo: "))
i = 0
soma = 0 
while(i < n):
	x = 1/(i + 1)**2
	pi = (6*x)**0.5
	soma = soma + pi
	i = i + 1
	print(x)
	print(pi)
	print(soma)
	print(i)
print(round(soma, 6))	
	
-- OUTPUT:
1.0
2.449489742783178
2.449489742783178
1
0.25
1.224744871391589
3.674234614174767
2
0.1111111111111111
0.816496580927726
4.490731195102493
3
0.0625
0.6123724356957945
5.103103630798287
4
0.04
0.4898979485566356
5.593001579354923
5
0.027777777777777776
0.408248290463863
6.001249869818786
6
0.02040816326530612
0.3499271061118826
6.351176975930669
7
0.015625
0.30618621784789724
6.657363193778567
8
0.012345679012345678
0.2721655269759087
6.929528720754475
9
0.01
0.2449489742783178
7.174477695032793
10
0.008264462809917356
0.22268088570756164
7.397158580740355
11
0.006944444444444444
0.2041241452319315
7.601282725972286
12
0.005917159763313609
0.1884222879063983
7.7897050138786845
13
0.00510204081632653
0.1749635530559413
7.964668566934626
14
0.0044444444444444444
0.1632993161855452
8.12796788312017
15
0.00390625
0.15309310892394862
8.28106099204412
16
0.0034602076124567475
0.14408763192842225
8.425148623972541
17
0.0030864197530864196
0.13608276348795434
8.561231387460495
18
0.00277008310
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:53:39) 
-- CODE:
n = int(input("digite um numero inteiro positivo: "))
i = 0
soma = 0 
while(i < n):
	x = 1/(i + 1)**2
	soma = soma + pi
	i = i + 1
pi = (6*soma)**0.5
print(round(pi, 6))	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = soma + pi
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:53:55) 
-- CODE:
n = int(input("digite um numero inteiro positivo: "))
i = 0
soma = 0 
while(i < n):
	x = 1/(i + 1)**2
	soma = soma + x
	i = i + 1
pi = (6*soma)**0.5
print(round(pi, 6))	
	
-- OUTPUT:
3.139684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:54:05) 
-- CODE:
n = int(input("digite um numero inteiro positivo: "))
i = 0
soma = 0 
while(i < n):
	x = 1/(i + 1)**2
	soma = soma + x
	i = i + 1
pi = (6*soma)**0.5
print(round(pi, 6))	
	
-- OUTPUT:
3.139684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:54:14) 
-- CODE:
n = int(input("digite um numero inteiro positivo: "))
i = 0
soma = 0 
while(i < n):
	x = 1/(i + 1)**2
	soma = soma + x
	i = i + 1
pi = (6*soma)**0.5
print(round(pi, 6))	
	
-- OUTPUT:
3.139684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:54:24) 
-- CODE:
n = int(input("digite um numero inteiro positivo: "))
i = 0
soma = 0 
while(i < n):
	x = 1/(i + 1)**2
	soma = soma + x
	i = i + 1
pi = (6*soma)**0.5
print(round(pi, 6))	
	
-- OUTPUT:
3.139684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:54:33) 
-- CODE:
n = int(input("digite um numero inteiro positivo: "))
i = 0
soma = 0 
while(i < n):
	x = 1/(i + 1)**2
	soma = soma + x
	i = i + 1
pi = (6*soma)**0.5
print(round(pi, 6))	
	
-- EXECUTION TIME:
0.209482
-- TEST CASE 1:
---- input:
500
---- correct output:
3.139684
---- user output:
3.139684
-- TEST CASE 2:
---- input:
159863
---- correct output:
3.141587
---- user output:
3.141587
-- TEST CASE 3:
---- input:
100
---- correct output:
3.132077
---- user output:
3.132077
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
